feat: event participation
